--- a/conference-demo/conference-demo/src/main/resources/application.properties
+++ b/conference-demo/conference-demo/src/main/resources/application.properties
@@ -1,7 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/conference_demo
-spring.datasource.username=root
-spring.datasource.password=root
+# The following configurations will be overridden to the default spring boot properties
+
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PWD}
 
 spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+# Custom Properties
+app.version=1.0.0
